Added new exercises

--- a/Синтаксис/Тема 5 - Массивы.md
+++ b/Синтаксис/Тема 5 - Массивы.md
@@ -4,3 +4,5 @@
 4. Пользователь вводит длину массива. Заполняет этот массив дробными числами. Программа выводит массив в обратном порядке.
 5. Программа создаёт двумерный массив 10х10. В каждой строке программа генерирует степени (с 1 по 10) чисел от 1 до 10. Так в первой строке будут степени единицы, во второй - двойки и так далее.
 6. Пользователю выводится таблица Пифагора.
+7. Определить какое число чаще всего встречается в массиве
+8. Заполнить массив случайными положительными и отрицательными целыми числами. Вывести его на экран. Разложить положительные и отрицательные числа по разным массивам
