Update Теория 3.1 - ООП. Основы.md

--- a/Алгоритмы/Теория 3.1 - ООП. Основы.md
+++ b/Алгоритмы/Теория 3.1 - ООП. Основы.md
@@ -41,7 +41,7 @@ public class GoodStudent { … }
 
 **Пример:**
 ```
-GoodStudent gs1 = **new** GoodStudent();
+GoodStudent gs1 = new GoodStudent();
 ```
 
 #### Поле - переменная в экземпляре класса
