--- a/Алгоритмы/Теория 3.1 - ООП. Основы.md
+++ b/Алгоритмы/Теория 3.1 - ООП. Основы.md
@@ -41,7 +41,7 @@ public class GoodStudent { … }
 
 **Пример:**
 ```
-GoodStudent gs1 = **new** GoodStudent();
+GoodStudent gs1 = new GoodStudent();
 ```
 
 ####Поле - переменная в экземпляре класса
@@ -67,8 +67,8 @@ GoodStudent gs1 = **new** GoodStudent();
 
 Пример:
 ```
-private string  _name_;
-private static int _age_;
+private string  name;
+private static int age;
 ```
 
 #### Метод - фрагмент кода для выполнения конкретной функции
@@ -82,7 +82,7 @@ private static int _age_;
 
 Объявление метода:
 ```
-<модификатор> <типВозвращаемогоЗначения> _<НазваниеМетода>_([параметры]) { … }
+<модификатор> <типВозвращаемогоЗначения> <НазваниеМетода>([параметры]) { … }
 ```
 
 **Конструктор** – это метод для инициализации объекта.
@@ -94,7 +94,7 @@ private static int _age_;
 
 Объявление конструктора:
 ```
-<модификатор> _<НазваниеКласса>_([параметры]) { … }
+<модификатор> <НазваниеКласса>([параметры]) { … }
 ```
 
 #### this
