--- a/Алгоритмы/Теория 3.2 - ООП. Инкапсуляция.md
+++ b/Алгоритмы/Теория 3.2 - ООП. Инкапсуляция.md
@@ -20,7 +20,7 @@ private string firstName; //поле, для которого создаётся
 public string FirstName
 {
     get { return firstName; } //вернуть значение поля
-    set { firstName = _value_; } //задать значение полю
+    set { firstName = value; } //задать значение полю
 }
 ```
 Упрощенная запись:
