ООП. Наследование и полиморфизм

--- a/Алгоритмы/Теория 3.3 - ООП. Наследование.md
+++ b/Алгоритмы/Теория 3.3 - ООП. Наследование.md
@@ -5,7 +5,7 @@
 * В подклассе требуется реализовать только то, что отличает его от родительского класса.
 
 #### Определение подкласса
-После названия класса ставится двоеточие и пишется название класса, от которого наследуем.
+После названия класса ставится **двоеточие** и пишется название класса, от которого наследуем. Название класса может быть только одно, множественное наследование не поддерживается.
 ```
 public class Human
 {
@@ -15,11 +15,13 @@ public class Human
     public string Name { get; set; }
     public int Age { get; set; }
     
-    protected void Walk() {
+    protected void Walk()
+    {
         //реализация
     }
 
-    public void WhoAmI() {
+    public void WhoAmI()
+    {
         //реализация
     }
 }
@@ -34,3 +36,38 @@ public class Student : Human
 }
 ```
 В примере студент имеет те же поля и методы, что и человек, но при этом может ещё и учиться.
+
+#### base
+Позволяет обращаться к полям и методам класса-родителя, наподобие **_this_**.
+
+#### Абстрактные классы
+* Создавать экземпляры абстрактного класса **нельзя**
+* Абстрактный класс может содержать **абстрактные методы** и методы доступа
+* Объявления абстрактных методов и свойств допускаются **только** в абстрактных классах
+
+* Неабстрактный класс, производный от абстрактного класса, **должен** реализовать все наследуемые абстрактные методы
+* Реализация предоставляется методом с ключевым словом _**override**_, который является членом неабстрактного класса.
+* В объявлении абстрактного метода **нельзя** использовать _static_ и _virtual_.
+
+Ключевое слово **abstract**
+```
+public abstract class Being
+{
+    public string Name {get; set;}
+    
+    public abstract void Move();
+}
+
+public class Human : Being
+{
+    public override void Move()
+    {
+        Console.WriteLine("Ходить");
+    }
+}
+```
+Абстрактные методы обычно объявляются, когда два и более подкласса должны играть **одну и ту же роль** **разными способами**
+
+Эти подклассы расширяют один и тот же абстрактный класс и предоставляют различные реализации абстрактных методов
+
+Абстрактные классы определяют достаточно общее поведение на вершине иерархии классов, а их подклассы обеспечивают детали реализации. 
