--- a/Алгоритмы/Теория 3.3 - ООП. Наследование.md
+++ b/Алгоритмы/Теория 3.3 - ООП. Наследование.md
@@ -49,7 +49,13 @@ public class Student : Human
 * Реализация предоставляется методом с ключевым словом _**override**_, который является членом неабстрактного класса.
 * В объявлении абстрактного метода **нельзя** использовать _static_ и _virtual_.
 
-Ключевое слово **abstract**
+Абстрактные методы обычно объявляются, когда два и более подкласса должны играть **одну и ту же роль** **разными способами**
+
+Эти подклассы расширяют один и тот же абстрактный класс и предоставляют различные реализации абстрактных методов
+
+Абстрактные классы определяют достаточно общее поведение на вершине иерархии классов, а их подклассы обеспечивают детали реализации. 
+
+#### abstract
 ```
 public abstract class Being
 {
@@ -66,8 +72,28 @@ public class Human : Being
     }
 }
 ```
-Абстрактные методы обычно объявляются, когда два и более подкласса должны играть **одну и ту же роль** **разными способами**
 
-Эти подклассы расширяют один и тот же абстрактный класс и предоставляют различные реализации абстрактных методов
+#### virtual
+Метод, помеченный ключевым словом **_virtual_**, имеет реализацию (в отличие от абстрактных методов), но может быть переопределён в подклассе с помощью **_override_**.
 
-Абстрактные классы определяют достаточно общее поведение на вершине иерархии классов, а их подклассы обеспечивают детали реализации. 
+Такой метод называется **виртуальным**.
+
+```
+public class Being
+{    
+    public virtual void Move() 
+    {
+        Console.WriteLine("Двигаться");
+    }
+}
+
+public class Human : Being
+{
+    public override void Move()
+    {
+        Console.WriteLine("Ходить");
+    }
+}
+```
+#### override
+Помечает, что реализуемый метод переопределяет (или реализует) метод из класса-родителя.
