Update Тема 3 - ООП.md

--- a/Алгоритмы/Тема 3 - ООП.md
+++ b/Алгоритмы/Тема 3 - ООП.md
@@ -20,3 +20,7 @@
 
 * все данные (вроде радиуса, ширины) запрашивать у пользователя
 * в вычислении габаритов использовать математические формулы
+
+### Задание 2
+
+Необходимо реализовать программу с классом автомобиль. Отразить его свойства (поля: например, название, максимальная скорость, цвет, вес...) и поведения (методы). Создать несколько экземпляров разных автомобилей (различия по полям).
