Update Тема 3 - ООП.md

--- a/Алгоритмы/Тема 3 - ООП.md
+++ b/Алгоритмы/Тема 3 - ООП.md
@@ -23,4 +23,4 @@
 
 ### Задание 2
 
-Необходимо реализовать программу с классом автомобиль. Отразить его свойства (поля: например, название, максимальная скорость, цвет, вес...) и поведения (методы). Создать несколько экземпляров разных автомобилей (различия по полям).
+Необходимо реализовать программу с классом автомобиль. Отразить его свойства (поля: например, название, максимальная скорость, цвет, вес...) и поведения (методы: например, расчёт лошадиных сил на тонну). Создать несколько экземпляров разных автомобилей (различия по полям).
