--- a/Алгоритмы/Рейтинг.md
+++ b/Алгоритмы/Рейтинг.md
@@ -33,4 +33,30 @@ public class Student:Man, IMove
     set { firstName = value; }
 }
 
-### 
+### Какие попытки перегрузки вызовут ошибку?
+
+```
+public void SomeWork(string key) { ... }
+```
+
+1. public void SomeWork(string keyword) { ... }
+1. public void SomeWork(string keyword, string key) { ... }
+1. public void SomeWork(int key) { ... }
+1. public int SomeWork(string key) { ... }
+
+
+### Распределите, какие утверждения относятся к:
+* А) Абстрактным классам
+* Б) Интерфейсам
+* В) И абстрактным классам, и интерфейсам
+
+1. Все методы *являются* public abstract
+1. Реализация предоставляется методом с ключевым словом override
+1. Производный класс должен реализовать все наследуемые методы без реализации
+1. Все поля являются константами или статическими переменными
+1. Нельзя создать объект такого типа
+1. Поддерживает множественное наследование
+1. Допускаются *объявления* абстрактных методов и свойств 
+1. Метод, реализующий наследуемый метод, должен быть публичным
+1. Может содержать виртуальные методы
+1. Определяет контракт поведения
